Commit: Search Working

--- a/src/main/resources/templates/displayall.html
+++ b/src/main/resources/templates/displayall.html
@@ -57,6 +57,7 @@
             <td><a th:href="@{'/viewprofile/'+ ${profile.getProfileID()}}"><span th:text="${profile.getProfileID()}"></span></a></td>
             <td th:text="${profile.getAge()}"></td>
             <td th:text="${profile.getMalefemale()}"></td>
+            <td th:text="${profile.getHeight()}"></td>
             <td th:text="${profile.getWeight()}"></td>
             <td th:text="${profile.getHairColor()}"></td>
 
