Commit: Likes Table Shows

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -33,17 +33,52 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
     <a class="navbar-brand abs" th:href="@{/}">AdamMeetsEve</a>
     <ul class="navbar-nav ml-auto">
-        <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Find All Users</button>
-        <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Advanced Search</button>
+        <a th:href="@{/displayall}" class="btn btn-outline-success my-2 my-sm-0 barBtn">Find All Users</a>
+        <button class="btn btn-outline-success my-2 my-sm-0 barBtn" id="advSearchBtn" data-toggle="modal" data-target="#searchModal">Advanced Search</button>
         <form action="logout" th:action="@{/logout}" method="post">
-            <button type="submit" button id="loginBtn" class="btn btn-info btn-md">Logout</button>
+            <button type="submit" class="btn btn-info btn-md barBtn">Logout</button>
         </form>
     </ul>
 </nav>
 
+<div id="searchModal" class="modal-fade" style="z-index:9999;" role="dialog";>
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <form action="search" th:action="@{/searchresult}" th:object="${searchParameters}" method="post">
+            <p>Advanced Search. Who Are You Looking For?</p><br>
+            <table div id="infoTbl" style="width:100%">
+                <tr>
+                    <th>Min Age: <input type="text" div id="textBox" placeholder="Age Range Start" th:field="*{ageStart}"/></th>
+                    <th>Max Age: <input type="text" div id="textBox" placeholder="Age Range End" th:field="*{ageEnd}"/></th>
+                </tr>
+                <tr>
+                    <th>Gender:<input type="text" div id="textBox" placeholder="Gender" th:field="*{gender}"/></th>
+                </tr>
+                <tr>
+                    <th>Min Height: <input type="text" div id="textBox" placeholder="Min Height" th:field="*{heightstart}"/></th>
+                    <th>Max Height: <input type="text" div id="textBox" placeholder="Max Height" th:field="*{heightend}"/></th>
+
+                </tr>
+                <tr>
+                    <th>Min Weight: <input type="text" div id="textBox" placeholder="Min Weight" th:field="*{weightstart}"/></th>
+                    <th>Max Weight: <input type="text" div id="textBox" placeholder="Max Weight" th:field="*{weightend}"/></th>
+                </tr>
+                <tr>
+                    <th>Hair color: <input type="text" div id="textBox" placeholder="Hair color" th:field="*{hairColor}"/></th>
+                </tr>
+                <tr>
+                    <th><input type="submit"/></th>
+                </tr>
+            </table>
+        </form>
+    </div>
 
 </div>
-<h1>Welcome To Your profile page, <span th:utext="${foundProfile.getProfileID()}"></span>!</h1><br><br>
+
+</div>
+<h1>Welcome To Your Profile Page, <span th:utext="${foundProfile.getProfileID()}"></span>!</h1><br><br>
 
 
 <div class="container">
@@ -64,11 +99,11 @@
         <p>
             <div>
                 <span th:utext="${foundProfile.getProfileID()}"></span>'s Dates:
-                <button class="btn btn-default" data-toggle="collapse" data-target="#likes" div id="likesButton">
+                <button class="btn btn-default" data-toggle="collapse" data-target="#dates" div id="likesButton">
                     <img src="https://macho-men.com/wp-content/uploads/2016/01/cropped-heart.png" style="max-width: 12px; max-height: 12px; width: auto; height: auto;">
                 </button>
             </div>
-            <div id="likes" class="collapse">
+            <div id="dates" class="collapse">
                 <!--
                 <table div id="infoTbl">
                     <tr>
@@ -85,23 +120,39 @@
                 -->
             </div>
             <div>
-            <span th:utext="${foundProfile.getProfileID()}"></span>'s Likes:
+        <hr size="2">
+                <span th:utext="${foundProfile.getProfileID()}"></span>'s Likes:
             <button class="btn btn-default" data-toggle="collapse" data-target="#likes" div id="likesButton">
                 <img src="https://macho-men.com/wp-content/uploads/2016/01/cropped-heart.png" style="max-width: 12px; max-height: 12px; width: auto; height: auto;">
             </button>
             </div>
             <div id="likes" class="collapse">
-            Likes placeholder
+                <table div id="infoTbl">
+                    <tr>
+                        <th>Liked To: </th>
+                    </tr>
+                    <tr th:each="profile: ${likedBy}">
+                        <td><a th:href="@{'/viewprofile/'+ ${profile.getLikee()}}"><span th:text="${profile.getLikee()}"></span></a></td>
+                        <td><span th:text="${profile.getTimeLike()}"></span></a></td>
+                    </tr>
+                    <tr>
+                        <th>Liked By: </th>
+                    </tr>
+                    <tr th:each="profile: ${likedTo}">
+                        <td><a th:href="@{'/viewprofile/'+ ${profile.getLikee()}}"><span th:text="${profile.getLiker()}"></span></a></td>
+                        <td><span th:text="${profile.getTimeLike()}"></span></a></td>
+                    </tr>
+                </table>
             </div>
         <hr size="2">
         <div>
             <span th:utext="${foundProfile.getProfileID()}"></span>'s Referrals:
-            <button class="btn btn-default" data-toggle="collapse" data-target="#likes" div id="likesButton">
+            <button class="btn btn-default" data-toggle="collapse" data-target="#referrals" div id="likesButton">
                 <img src="https://macho-men.com/wp-content/uploads/2016/01/cropped-heart.png" style="max-width: 12px; max-height: 12px; width: auto; height: auto;">
             </button>
         </div>
-        <div id="likes" class="collapse">
-            Likes placeholder
+        <div id="referrals" class="collapse">
+
         </div>
 
 
