--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -55,20 +55,20 @@
         <p>Advanced Search. Who Are You Looking For?</p><br>
             <table div id="infoTbl" style="width:100%">
                 <tr>
-                    <th>Age Range: <input type="text" div id="textBox" placeholder="Age Range Start" th:field="*{ageStart}"/></th>
-                    <th><input type="text" div id="textBox" placeholder="Age Range End" th:field="*{ageEnd}"/></th>
+                    <th>Min Age: <input type="text" div id="textBox" placeholder="Age Range Start" th:field="*{ageStart}"/></th>
+                    <th>Max Age: <input type="text" div id="textBox" placeholder="Age Range End" th:field="*{ageEnd}"/></th>
                 </tr>
                 <tr>
                     <th>Gender:<input type="text" div id="textBox" placeholder="Gender" th:field="*{gender}"/></th>
                 </tr>
                 <tr>
-                    <th>Height range: <input type="text" div id="textBox" placeholder="Min Height" th:field="*{heightstart}"/></th>
-                    <th><input type="text" div id="textBox" placeholder="Max Height" th:field="*{heightend}"/></th>
+                    <th>Min Height: <input type="text" div id="textBox" placeholder="Min Height" th:field="*{heightstart}"/></th>
+                    <th>Max Height: <input type="text" div id="textBox" placeholder="Max Height" th:field="*{heightend}"/></th>
 
                 </tr>
                 <tr>
-                    <th>Weight range: <input type="text" div id="textBox" placeholder="Min Weight" th:field="*{weightstart}"/></th>
-                    <th><input type="text" div id="textBox" placeholder="Max Weight" th:field="*{weightend}"/></th>
+                    <th>Min Weight: <input type="text" div id="textBox" placeholder="Min Weight" th:field="*{weightstart}"/></th>
+                    <th>Max Weight: <input type="text" div id="textBox" placeholder="Max Weight" th:field="*{weightend}"/></th>
                 </tr>
                 <tr>
                     <th>Hair color: <input type="text" div id="textBox" placeholder="Hair color" th:field="*{hairColor}"/></th>
